feat(countdown): 动态更新高考倒计时

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <!-- CSS样式 -->
 <link href="css/style.css" rel="stylesheet" type="text/css">
-<!-- 网站标题 -->
+<!-- 动态标题将通过JS更新 -->
 <title>高考倒计时-高考加油</title>
 </head>
 <body>
@@ -15,11 +15,11 @@
 <div class="bg-container snowy">
 	<!-- 页面内容 -->
 	<div class="page-content">
-				<!-- 标题 -->
-				<h2>2025高考倒计时</h2>
+				<!-- 动态年份标题 -->
+				<h2 class="countdown-title"></h2>
 				<!-- 倒计时部分 -->
 				<div class="snow-box">
-				<div class="countdown" data-date="2025/6/7 09:00:00"></div>
+				<div class="countdown"></div>
 		    	</div>
 			</div>
 		</div>
